1998-11-03  /users/domivogt  <dominik_vogt@hp.com>

	* TO-DO (Cleanups): Updated the TO-DO list

Tue Nov  2 00:35:30 1998  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/builtins.c
	* fvwm/complex.c
	* fvwm/menus.c
	* fvwm/move.c
	* fvwm/placement.c
	* fvwm/resize.c:
	* fixed XBell bug

Tue Nov  2 00:35:30 1998  Dominik Vogt  <dominik_vogt@hp.com>

	* modules/FvwmButtons/CHANGES
	* modules/FvwmButtons/FvwmButtons.h
	* modules/FvwmButtons/FvwmButtons.1
	* modules/FvwmButtons/TODO
	* modules/FvwmButtons/button.c
	* modules/FvwmButtons/draw.c
	* modules/FvwmButtons/parse.c:
	* Left/Right/Center option for buttons, did some cleanup

Tue Nov  2 00:35:30 1998  Dominik Vogt  <dominik_vogt@hp.com>

	* cleaned up lots of files for lclint

Sun Nov  1 12:52:59 1998  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* sample.fvwmrc/system.fvwm2rc*: Removed the lines setting
	ModulePath, IconPath, and PixmapPath, since the compiled-in
	defaults can be set using configure.

Sun Nov  1 12:26:01 1998  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* modules/FvwmM4/FvwmM4.c (m4_defs): 
	* modules/FvwmCpp/FvwmCpp.c (cpp_defs): Split FVWMDIR definition
	into FVWM_MODULEDIR and FVWM_CONFIGDIR.

Sun Nov  1 09:54:14 1998  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* extras/FvwmTaskBar/Goodies.c: Restored Goodies.c from -r 1.1 of
	the repository.

	* libs/Picture.c (GetPicture): Removed the #ifdef NotUsed from
	around this function.  Appended "int color_limit" to the list of
	parameters.  Restored GetPicture() declaration to fvwmlib.h.

	* extras/FvwmTaskBar/Start.c: Fixed call to GetPicture function,
	using "-1" as the color_limit (i.e., no color limit).

Sun Nov  1 09:19:08 1998  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.in: Set VERSION to 2.1.0.

Sat Oct 31 06:44:50 1998  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* Basic autoconfiguration support added.

Sat Oct 31 06:02:37 1998  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* modules/FvwmCpp: 